--- a/descss.css
+++ b/descss.css
@@ -5,17 +5,53 @@ body {
 #div1 {
   height: 25vh;
   background-color: red;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 #div2 {
   height: 25vh;
   background-color: orange;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 #div3 {
-  height: 25vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#div3 div {
+  height: 12vh;
+}
+
+#div3 div.info-1 {
   background-color: yellow;
-  text-align: center;
+}
+
+#div3 div.info-2 {
+  background-color: green;
+  display: flex;
+  align-items: center;
+}
+#div4 {
+  display: flex;
+  flex-direction: row;
+  height: 12vh;
+}
+
+#div4 div.info-3 {
+  background-color: blue;
+  width: 50%;
+}
+
+#div4 div.info-4 {
+  background-color: purple;
+  width: 50%;
 }
